# tv-ctl

./: .env.example  .gitignore  README.md  pyproject.toml
src/bravia_ctl/: __init__.py  __main__.py  auth.py  cli.py  client.py  commands.py  config.py  discovery.py  exceptions.py  ircc.py
src/philips_ctl/: __init__.py  __main__.py  auth.py  cli.py  client.py  commands.py  config.py  exceptions.py
tests/: test_auth.py  test_client.py  test_config.py  test_ircc.py
