[project]
name = "bravia-ctl"
version = "0.1.0"
description = "CLI tool for controlling Sony Bravia Android TVs via their REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "lestwastaken"}]
keywords = ["sony", "bravia", "tv", "remote", "ircc", "pentest"]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/lestwastaken/bravia-ctl"
Repository = "https://github.com/lestwastaken/bravia-ctl"
Issues = "https://github.com/lestwastaken/bravia-ctl/issues"

[project.scripts]
bravia-ctl = "bravia_ctl.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bravia_ctl"]
