[project]
name = "tv-ctl"
version = "0.2.0"
description = "Pentest toolkit for Sony Bravia and Philips Android TVs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "lestwastaken"}]
keywords = ["sony", "bravia", "philips", "tv", "remote", "ircc", "pentest", "jointspace"]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/lestwastaken/bravia-ctl"
Repository = "https://github.com/lestwastaken/bravia-ctl"
Issues = "https://github.com/lestwastaken/bravia-ctl/issues"

[project.scripts]
bravia-ctl = "bravia_ctl.cli:main"
philips-ctl = "philips_ctl:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bravia_ctl", "src/philips_ctl"]
